--- a/03_template/index.html
+++ b/03_template/index.html
@@ -28,8 +28,8 @@
         <div class="container">
             <div class="row-line header-info">
                 <div class="logo">
-                    <a href="/" class="mobile-only"><img src="assets/main/images/logo-single.png" alt="Universal Smart Technology"></a>
-                    <a href="/" class="web-only"><img src="assets/main/images/logo.png" alt="Universal Smart Technology"></a>
+                    <a href="./index.html" class="mobile-only"><img src="assets/main/images/logo-single.png" alt="Universal Smart Technology"></a>
+                    <a href="./index.html" class="web-only"><img src="assets/main/images/logo.png" alt="Universal Smart Technology"></a>
                     <!-- <a href="/">Universal Smart Technology</a> -->
                 </div>
                 <div class="search-bar">
@@ -53,12 +53,12 @@
             </div>
             <div id="MobileNav" class="row-line web-only">
                 <ul class="navigation inline tab-from" target="#NavTab">
-                    <li class="tab-from-item active"><a href="#">Home</a></li>
-                    <li class="tab-from-item"><a href="#">For Investors</a></li>
-                    <li class="tab-from-item"><a href="#">Public Company Services</a></li>
-                    <li class="tab-from-item"><a href="#">Our Sites</a></li>
+                    <li class="tab-from-item active"><a href="./index.html">Home</a></li>
+                    <li class="tab-from-item"><a href="./for-investor.html">For Investors</a></li>
+                    <li class="tab-from-item"><a href="#">Resolutions</a></li>
+                    <li class="tab-from-item"><a href="#">Services</a></li>
+                    <li class="tab-from-item"><a href="#">Products</a></li>
                     <li class="tab-from-item"><a href="#">Conferences</a></li>
-                    <li class="tab-from-item"><a href="#">Contact Us</a></li>
                     <li class="tab-from-item"><a href="#">About Us</a></li>
                 </ul>
             </div>
@@ -73,7 +73,7 @@
                 <div class="tab-to-item">
                     <ul class="inline">
                         <li><a href="#">bGORACOM QUICK TIPS</a></li>
-                        <li><a href="#">For Investors</a></li>
+                        <li><a href="#">Quick Form</a></li>
                         <li><a href="#">For Investors</a></li>
                         <li><a href="#">For Investors</a></li>
                         <li><a href="#">For Investors</a></li>
@@ -138,12 +138,12 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="image-center">
-                                <a href="#"><img src="assets/main/images/banner1920x500-1.png" alt="First slide"></a>
+                                <a href="#"><img src="assets/main/images/banner-home.png" alt="First slide"></a>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="image-center">
-                                <a href="#"><img src="assets/main/images/banner1920x500-1.png" alt="Second slide"></a>
+                                <a href="#"><img src="assets/main/images/banner-home.png" alt="Second slide"></a>
                             </div>
                         </div>
                     </div>
@@ -516,6 +516,12 @@
     </section>
     <footer>
         <div class="container">
+            <div class="footer-list">
+                <ul class="inline">
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </div>
             <div class="copyright">Copyright Focus Universal, Inc. 2017</div>
         </div>
     </footer>
