--- a/03_template/for-investor.html
+++ b/03_template/for-investor.html
@@ -53,8 +53,8 @@
             </div>
             <div id="MobileNav" class="row-line web-only">
                 <ul class="navigation inline tab-from" target="#NavTab">
-                    <li class="tab-from-item active"><a href="./index.html">Home</a></li>
-                    <li class="tab-from-item"><a href="./for-investor.html">For Investors</a></li>
+                    <li class="tab-from-item"><a href="./index.html">Home</a></li>
+                    <li class="tab-from-item active"><a href="./for-investor.html">For Investors</a></li>
                     <li class="tab-from-item"><a href="#">Resolutions</a></li>
                     <li class="tab-from-item"><a href="#">Services</a></li>
                     <li class="tab-from-item"><a href="#">Products</a></li>
