--- a/03_template/for-investor.html
+++ b/03_template/for-investor.html
@@ -141,7 +141,7 @@
                                 <a href="#"><img src="assets/main/images/banner-for-investor.png" alt="First slide"></a>
                             </div>
                         </div>
-                        
+
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -157,7 +157,7 @@
     </section>
     <section class="section--gray section--big">
         <div class="container">
-            <h2 class="section-title">For Investor</h2>
+            <h2 class="section-title center">For Investor</h2>
             <div class="information">
                 <p>Focus Universal Inc., a publicly traded company (OTCQB: FCUV), is a universal smart device developer
                     and manufacturer, headquartered in Los Angeles, California.
@@ -218,98 +218,163 @@
     <section class="section--big">
         <div class="container">
             <div class="section-title">Envents</div>
-            <div class="information">
-                <p>Gone are the days of planting your seeds and hoping for the best. Farming has evolved from horse and
-                    plough, to GMO, and now further on, to smart technologies.</p>
+            <div class="list-links">
+                <ul class="inline">
+                    <li><a href="#">Press Releases</a></li>
+                    <li><a href="#">IR Contacts</a></li>
+                    <li><a href="#">SEC Filings</a></li>
+                    <li><a href="#">Annual Reports</a></li>
+                </ul>
+            </div>
+            <div class="list-infos">
+                <div class="list-info">
+                    <div class="list-info-media">
+                        <img src="./assets/main/images/news/marketing.png" alt="OTC" />
+                    </div>
+                    <div class="list-info-body">
+                        <div class="list-info-title">Focus Universal Engages Hayden IR to Develop Comprehensive
+                            Investor Relations Program</div>
+                        <div class="list-info-summary">
+                            Gone are the days of planting your seeds and hoping for the best. Farming has evolved from
+                            horse and plough, to GMO, and now further on, to smart technologies.
 
-                <p> The Economist covered the technological future of farming and it’s effective impacts on yield, and
-                    therefore profits.</p>
+                            The Economist covered the technological future of farming and it’s effective impacts on
+                            yield, and therefore profits.
+                        </div>
+                        <div class="list-info-date">20 Sep, 2017</div>
+                        <div class="list-info-auther">By Desheng Wang</div>
+                    </div>
+                </div>
+                <div class="list-info">
+                    <div class="list-info-media">
+                        <img src="./assets/main/images/news/otc.png" alt="OTC" />
+                    </div>
+                    <div class="list-info-body">
+                        <div class="list-info-title">Focus Universal Submits Application For NASDAQ Up-Listing</div>
+                        <div class="list-info-summary">Focus Universal, Inc. (OTCQB: FCUV) ("Focus Universal" or the
+                            "Company"), a developer of IOT technologies including its Universal Smart Instrumentation
+                            Platform ("USIP"), has submitted its formal application to list the Company's common stock
+                            on the NASDAQ exchange.</div>
+                        <div class="list-info-date">20 Sep, 2017</div>
+                        <div class="list-info-auther">By Desheng Wang</div>
+                    </div>
+                </div>
+                <div class="list-info">
+                    <div class="list-info-media">
+                        <img src="./assets/main/images/news/otc.png" alt="OTC" />
+                    </div>
+                    <div class="list-info-body">
+                        <div class="list-info-title">Focus Universal Submits Application For NASDAQ Up-Listing</div>
+                        <div class="list-info-summary">Focus Universal, Inc. (OTCQB: FCUV) ("Focus Universal" or the
+                            "Company"), a developer of IOT technologies including its Universal Smart Instrumentation
+                            Platform ("USIP"), has submitted its formal application to list the Company's common stock
+                            on the NASDAQ exchange.</div>
+                        <div class="list-info-date">20 Sep, 2017</div>
+                        <div class="list-info-auther">By Desheng Wang</div>
+                    </div>
+                </div>
+                <div class="list-info">
+                    <div class="list-info-media">
+                        <img src="./assets/main/images/news/otc.png" alt="OTC" />
+                    </div>
+                    <div class="list-info-body">
+                        <div class="list-info-title">Focus Universal Submits Application For NASDAQ Up-Listing</div>
+                        <div class="list-info-summary">Focus Universal, Inc. (OTCQB: FCUV) ("Focus Universal" or the
+                            "Company"), a developer of IOT technologies including its Universal Smart Instrumentation
+                            Platform ("USIP"), has submitted its formal application to list the Company's common stock
+                            on the NASDAQ exchange.</div>
+                        <div class="list-info-date">20 Sep, 2017</div>
+                        <div class="list-info-auther">By Desheng Wang</div>
+                    </div>
+                </div>
+                <div class="list-info">
+                    <div class="list-info-media">
+                        <img src="./assets/main/images/news/otc.png" alt="OTC" />
+                    </div>
+                    <div class="list-info-body">
+                        <div class="list-info-title">Focus Universal Submits Application For NASDAQ Up-Listing</div>
+                        <div class="list-info-summary">Focus Universal, Inc. (OTCQB: FCUV) ("Focus Universal" or the
+                            "Company"), a developer of IOT technologies including its Universal Smart Instrumentation
+                            Platform ("USIP"), has submitted its formal application to list the Company's common stock
+                            on the NASDAQ exchange.</div>
+                        <div class="list-info-date">20 Sep, 2017</div>
+                        <div class="list-info-auther">By Desheng Wang</div>
+                    </div>
+                </div>
+                <div class="list-info">
+                    <div class="list-info-media">
+                        <img src="./assets/main/images/news/otc.png" alt="OTC" />
+                    </div>
+                    <div class="list-info-body">
+                        <div class="list-info-title">Focus Universal Submits Application For NASDAQ Up-Listing</div>
+                        <div class="list-info-summary">Focus Universal, Inc. (OTCQB: FCUV) ("Focus Universal" or the
+                            "Company"), a developer of IOT technologies including its Universal Smart Instrumentation
+                            Platform ("USIP"), has submitted its formal application to list the Company's common stock
+                            on the NASDAQ exchange.</div>
+                        <div class="list-info-date">20 Sep, 2017</div>
+                        <div class="list-info-auther">By Desheng Wang</div>
+                    </div>
+                </div>
             </div>
-            <div class="industrys inline">
-                <div class="feature-info">
-                    <div class="feature-info-media rounded-circle">
-                        <img src="./assets/main/images/icon-chemical.png" alt="chemical">
-                    </div>
-                    <h2 class="feature-info-title">Chemical</h2>
-                </div>
-                <div class="feature-info">
-                    <div class="feature-info-media rounded-circle">
-                        <img src="./assets/main/images/icon-energy.png" alt="energy">
-                    </div>
-                    <h2 class="feature-info-title">Energy</h2>
-                </div>
-                <div class="feature-info">
-                    <div class="feature-info-media rounded-circle">
-                        <img src="./assets/main/images/icon-environment.png" alt="environment">
-                    </div>
-                    <h2 class="feature-info-title">Environment</h2>
-                </div>
-                <div class="feature-info">
-                    <div class="feature-info-media rounded-circle">
-                        <img src="./assets/main/images/icon-farm.png" alt="farm">
-                    </div>
-                    <h2 class="feature-info-title">Farm</h2>
-                </div>
-                <div class="feature-info">
-                    <div class="feature-info-media rounded-circle">
-                        <img src="./assets/main/images/icon-pharmaceutical.png" alt="pharmaceutical">
-                    </div>
-                    <h2 class="feature-info-title">Pharmaceutical</h2>
-                </div>
-                <div class="feature-info">
-                    <div class="feature-info-media rounded-circle">
-                        <img src="./assets/main/images/icon-temperrature.png" alt="Temperrature">
-                    </div>
-                    <h2 class="feature-info-title">Temperrature</h2>
-                </div>
-                <div class="feature-info">
-                    <div class="feature-info-media rounded-circle">
-                        <img src="./assets/main/images/icon-water.png" alt="water">
-                    </div>
-                    <h2 class="feature-info-title">Water Resource</h2>
-                </div>
-            </div>
+
         </div>
     </section>
     <section class="section--big">
         <div class="container">
             <div class="section-title right">News</div>
-            <div class="infomation">
-                <p>The USIP is realized on mobile devices by applying the interactive graphical representation of
-                    control and indicator elements common in real instruments such as display, computation, information
-                    storage, knobs, buttons, dials, and graphs etc. A touch screen interface which supports real-time
-                    data monitoring facilitates instrument control and operation.</p>
-
-                <p>The USIP is a versatile network. One instrument could do many different measurements and controls
-                    and substitutes for many other instruments.</p>
-
-                <p>The Ubiquitor acts as a wireless bridge between the smartphone and data acquisition module. The
-                    Sensor module, which consists of sensors and data acquisition measurement hardware, measures
-                    electrical or physical phenomenon such as voltage, current, temperature, pressure, or sound. The
-                    USC combines the monitoring functionality of the Ubiquitor with the ability control any device with
-                    the USIP Smart App.</p>
-
-                <p>The self-adaptive universal smart application software automatically identifies and configures the
-                    attractive graphical user interface for the end users.</p>
+            <div class="list-links right">
+                <ul class="inline">
+                    <li><a href="#">Press Releases</a></li>
+                    <li><a href="#">IR Contacts</a></li>
+                    <li><a href="#">SEC Filings</a></li>
+                    <li><a href="#">Annual Reports</a></li>
+                </ul>
             </div>
-            <div class="row demo">
-                <div class="col-md-6">
-                    <div class="demo-sensor"><img src="./assets/main/images/resolution/air.png" alt="air"></div>
-                    <div class="demo-sensor"><img src="./assets/main/images/resolution/lighting.png" alt="lighting"></div>
-                    <div class="demo-sensor"><img src="./assets/main/images/resolution/somke.png" alt="somke"></div>
-                    <div class="demo-sensor"><img src="./assets/main/images/resolution/temperature.png" alt="temperature"></div>
-                    <div class="demo-sensor"><img src="./assets/main/images/resolution/water.png" alt="water"></div>
+            <div class="list-infos">
+                <div class="list-info">
+                    <div class="list-info-body">
+                        <div class="list-info-title">Focus Universal Engages Hayden IR to Develop Comprehensive
+                            Investor Relations Program</div>
+                        <div class="list-info-date">20 Sep, 2017</div>
+                    </div>
+                </div>
+                <div class="list-info">
+                    <div class="list-info-body">
+                        <div class="list-info-title">Focus Universal Engages Hayden IR to Develop Comprehensive
+                            Investor Relations Program</div>
+                        <div class="list-info-date">20 Sep, 2017</div>
+                    </div>
+                </div>
+                <div class="list-info">
+                    <div class="list-info-body">
+                        <div class="list-info-title">Focus Universal Engages Hayden IR to Develop Comprehensive
+                            Investor Relations Program</div>
+                        <div class="list-info-date">20 Sep, 2017</div>
+                    </div>
+                </div>
+                <div class="list-info">
+                    <div class="list-info-body">
+                        <div class="list-info-title">Focus Universal Engages Hayden IR to Develop Comprehensive
+                            Investor Relations Program</div>
+                        <div class="list-info-date">20 Sep, 2017</div>
+                    </div>
+                </div>
+                <div class="list-info">
+                    <div class="list-info-body">
+                        <div class="list-info-title">Focus Universal Engages Hayden IR to Develop Comprehensive
+                            Investor Relations Program</div>
+                        <div class="list-info-date">20 Sep, 2017</div>
+                    </div>
+                </div>
+                <div class="list-info">
+                    <div class="list-info-body">
+                        <div class="list-info-title">Focus Universal Engages Hayden IR to Develop Comprehensive
+                            Investor Relations Program</div>
+                        <div class="list-info-date">20 Sep, 2017</div>
+                    </div>
                 </div>
             </div>
-            <div class="row demo">
-                <div class="col-md-6">
-                    <div id="DemoCloud" class="demo-cloud"><img src="./assets/main/images/resolution/cloud.png" alt="cloud"></div>
-                </div>
-                <div class="col-md-6">
-                    <div id="DemoTerminal" class="demo-terminal"><img src="./assets/main/images/resolution/terminal.png"
-                            alt="terminal"></div>
-                </div>
-            </div>
+
         </div>
     </section>
     <footer>
