--- a/03_template/for-investor.html
+++ b/03_template/for-investor.html
@@ -72,11 +72,10 @@
                 </div>
                 <div class="tab-to-item">
                     <ul class="inline">
-                        <li><a href="#">bGORACOM QUICK TIPS</a></li>
-                        <li><a href="#">For Investors</a></li>
-                        <li><a href="#">For Investors</a></li>
-                        <li><a href="#">For Investors</a></li>
-                        <li><a href="#">For Investors</a></li>
+                        <li><a href="#Marketing">Marketing</a></li>
+                        <li><a href="#Events">Events</a></li>
+                        <li><a href="#News">News</a></li>
+                        <li><a href="#ApplicationForm">Application Form</a></li>
                     </ul>
                 </div>
                 <div class="tab-to-item">
@@ -179,7 +178,9 @@
             </div>
         </div>
     </section>
+
     <section class="section--big section--dark">
+        <a name="Marketing"></a>
         <div class="container">
             <h2 class="section-title right">Marketing</h2>
             <div class="row">
@@ -216,6 +217,7 @@
         </div>
     </section>
     <section class="section--big">
+        <a name="Events"></a>
         <div class="container">
             <div class="section-title">Envents</div>
             <div class="list-links">
@@ -320,14 +322,14 @@
         </div>
     </section>
     <section class="section--big">
+            <a name="News"></a>
         <div class="container">
             <div class="section-title right">News</div>
             <div class="list-links right">
                 <ul class="inline">
-                    <li><a href="#">Press Releases</a></li>
-                    <li><a href="#">IR Contacts</a></li>
-                    <li><a href="#">SEC Filings</a></li>
-                    <li><a href="#">Annual Reports</a></li>
+                    <li><a href="#">Latest News</a></li>
+                    <li><a href="#">Products News</a></li>
+                    <li><a href="#">Events News</a></li>
                 </ul>
             </div>
             <div class="list-infos">
